--- a/TemplateInfo.plist
+++ b/TemplateInfo.plist
@@ -9,7 +9,7 @@
 	<key>DefaultCompletionName</key>
 	<string>MyClass</string>
 	<key>Description</key>
-	<string>A Cocos2d-X C++ class, with implementation and header files.</string>
+	<string>A C++ class, with implementation and header files for Cocos2d-X.</string>
 	<key>Kind</key>
 	<string>Xcode.IDEKit.TextSubstitutionFileTemplateKind</string>
 	<key>MainTemplateFile</key>
@@ -71,6 +71,6 @@
 	<key>SortOrder</key>
 	<string>1</string>
 	<key>Summary</key>
-	<string>A C++ class with a header</string>
+	<string>A C++ class with a header for Cocos2d-X</string>
 </dict>
 </plist>
